# MyIRC

./: .gitignore  CMakeLists.txt  Makefile
bonus/client/: Client.pro  Makefile2  main.cpp  mainwindow.cpp
client/: Client.pro  Makefile  main.cpp  mainwindow.cpp  mainwindow.h  test
include/: channels.h  circular_tools.h  client.h  commands.h  mainwindow.h  mainwindow.hpp  proceed.h  replies.h  server.h  socket.h  types.h  ui_mainwindow.h
server/: circular_buffer.c  proceed.c
src/client/: Client.pro  Makefile  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.ui
src/com/: connect_to_server.c  get_select.c  proceed_client_commands.c
src/server/: channel_com.c  circular_buffer.c  command_join.c  command_list.c  command_names.c  command_nick.c  command_part.c  command_pass.c  command_privmsg.c  command_quit.c  command_user.c  proceed.c  proceed_commands.c  proceed_writes.c  replies.c  server.c  server_init.c  server_tools.c  socket.c
